replace log4j to log4j2

--- a/src/main/resources/fishRPC-client.properties
+++ b/src/main/resources/fishRPC-client.properties
@@ -1,7 +1,5 @@
-#RPC注解扫描包
-fish.rpc.scan.package=com.fish.rpc.test
-#服务停止状态下 客户端重连延时时间 秒
-fish.rpc.client.reconnection.delay=10
+#开启调试模式,默认false
+fish.rpc.debug.mode=true
 #客户端超时时间 秒
 fish.rpc.client.read.timeout=10
 #处理线程数 默认10
@@ -12,5 +10,7 @@ fish.rpc.server=127.0.0.1:5050
 #rpc连接池设置
 fish.rpc.connect.max=10
 fish.rpc.connect.min=5
-fish.rpc.connect.timeout=10000
-fish.rpc.connect.check.interval=30000
+#获取连接对象超时时间 秒
+fish.rpc.connect.timeout=3
+#配置空闲连接健康检查间隔时间 秒
+fish.rpc.connect.check.interval=10
