--- a/src/main/resources/fishRPC-client.properties
+++ b/src/main/resources/fishRPC-client.properties
@@ -1,16 +1,10 @@
 #开启调试模式,默认false
 fish.rpc.debug.mode=false
-#客户端超时时间 秒
-fish.rpc.client.read.timeout=10
-#处理线程数 默认10
-fish.rpc.system.thread.num=10
+#客户端超时时间 秒 默认3秒
+fish.rpc.client.read.timeout=100000
 #rpc服务器
 fish.rpc.server=127.0.0.1:5050
 
 #rpc连接池设置
-fish.rpc.connect.max=10
+fish.rpc.connect.max=5
 fish.rpc.connect.min=5
-#获取连接对象超时时间 秒
-fish.rpc.connect.timeout=3
-#配置空闲连接健康检查间隔时间 秒
-fish.rpc.connect.check.interval=10
