--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
         <dependency>
         	 <groupId>com.fish.rpc</groupId>
 		    <artifactId>FishRPC-client</artifactId>
-		    <version>1.1.2-SNAPSHOT</version>
+		    <version>2.0.0</version>
     	</dependency>
     </dependencies>
     <build>
