--- a/src/main/resources/fishRPC-client.properties
+++ b/src/main/resources/fishRPC-client.properties
@@ -8,3 +8,11 @@ fish.rpc.server=127.0.0.1:5050
 #rpc连接池设置
 fish.rpc.connect.max=5
 fish.rpc.connect.min=5
+
+#nacos 客户端配置
+nacos.enable=true
+nocas.server.addrs=192.168.0.88:8846,192.168.0.88:8847,192.168.0.88:8848
+ocas.namespace=2385be21-00f0-4a41-b853-19c13f800150
+nacos.server.name=fish.service.test.rpc
+nacos.server.group=DEFAULT_GROUP
+nacos.server.cluster=defaultcluster
